Refactor TreeContextMenu
Comments and some collapsed method calls. No functionality change.